objects/Batch_Apex_Job__c.object
<CustomObject>
    <description>Batch Apex jobs managed by Batch Job Scheduler</description>
    <fields>
        <fullName>Batch_Class_Name__c</fullName>
        <description>Apex batch class name</description>
        <inlineHelpText>Batch Apex class name</inlineHelpText>
        <label>Batch Class Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Group__c</fullName>
        <description>Group of batch jobs running together</description>
        <inlineHelpText>Group of batch jobs</inlineHelpText>
        <label>Batch Group</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Batch_Job_Schedule__c</fullName>
        <description>Parent Batch Job Schedule</description>
        <label>Batch Job Schedule</label>
        <referenceTo>Batch_Job_Schedule__c</referenceTo>
        <relationshipLabel>Batch Apex Jobs</relationshipLabel>
        <relationshipName>Batch_Apex_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Batch Apex job batch size, value between 1 to 2000.</description>
        <inlineHelpText>Value between 1 to 2000</inlineHelpText>
        <label>Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether the Batch Apex job will be executed</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Batch Apex Job</label>
    <nameField>
        <displayFormat>JOB-{000000}</displayFormat>
        <label>Batch Apex Job No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Apex Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Batch_Size</fullName>
        <active>true</active>
        <errorConditionFormula>OR
(
Batch_Size__c &lt; 1,
Batch_Size__c &gt; 2000
)</errorConditionFormula>
        <errorDisplayField>Batch_Size__c</errorDisplayField>
        <errorMessage>Batch size must be between 1 and 2,000.</errorMessage>
    </validationRules>
</CustomObject>